--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-appdirs==1.4.4
-beautifulsoup4==4.11.1
-requests==2.25.1
-tkcalendar==1.6.1
+appdirs>=1.4.4
+beautifulsoup4>=4.11.2
+requests>=2.28.1
+tkcalendar>=1.6.1
+pronotepy>=2.12.1
